fixed navbar too big -> section in global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,18 +40,24 @@ h1 {
   font-size: 2.5rem;
 }
 
-section {
+/* section {
   position: relative;
   width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
   align-content: center;
-}
+} */
 
 /* Cover Page */
 #CoverPage {
   height: 100vh;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  align-content: center;
 }
 
 /* Attempt at Hardcoding typewriter effect */
@@ -278,7 +284,6 @@ animation:
     padding: 12.5px 22.5px;
     margin-top: 12.5px;
     margin-bottom: 12.5px;
-    /* margin-left: 80px; */
     border-width: 1px;
 }
 
